<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bomberman cmov</string>
    <string name="btn_single">Single Player</string>
    <string name="btn_multi">Multi Player</string>
    <string name="btn_options">Options</string>
    <string name="btn_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="pause_button_text">Pause</string>
    <string name="resume_button_text">Resume</string>
    <string name="quit_button_text">Quit</string>
    <string name="left_button_text">Left</string>
    <string name="right_button_text">Right</string>
    <string name="up_button_text">Up</string>
    <string name="down_button_text">Down</string>
    <string name="bomb_button_text">Bomb</string>
    <string name="display_time_left">Time left:</string>
    <string name="display_player_name">Name:</string>
    <string name="display_player_score">Score:</string>
    <string name="display_num_players">Players left:</string>
    <string name="hint_player_name">Insert a nickname here</string>
    <string name="background_main_menu_description">Bomberman front view</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="btn_req_peers">Request Peers</string>
    <string name="et_player_name">Player name will appear here</string>
    <string name="btn_accept">Accept new player</string>
    <string name="btn_server">Server</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="display_available_games">Available Games</string>
    <string name="btn_refresh_available_games">Refresh</string>
    <string name="finished_title_win">You won! All droids killed</string>
    <string name="finished_title_lost_killed">You lost! R.I.P</string>
    <string name="finished_title_lost_time">You lost! Time is over</string>
    <string name="finished_title_lost_unkown">You lost! Unkown?</string>
    <string name="finished_button">Exit</string>
    
    <string-array name="level_strings">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>  
    
</resources>
