<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">
    <Button android:id="@+id/bSingle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/btn_single" />
    <Button android:id="@+id/bMulti"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/btn_multi" />
    <Button android:id="@+id/bOptions"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dp"
		    android:text="@string/btn_options" />    
    <Button android:id="@+id/bExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/btn_exit" />
</LinearLayout>